objects/project_cloud__Capability__c.object
<CustomObject>
    <description>The capabilities of your resources to perform a given work type</description>
    <fields>
        <fullName>project_cloud__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox indicating if the resource can currently have tasks assigned to it
(Cloud Coach 10-NOV-10)</description>
        <label>Resource Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>Depending on what type of resource is selected Display a description from the relevant object</description>
        <formula>IF(NOT(ISBLANK(project_cloud__User__c)),
	project_cloud__User__r.FirstName &amp; &apos; &apos; &amp; project_cloud__User__r.LastName,
/*ELSE*/IF(NOT(ISBLANK(project_cloud__Project_Task__c)),
	project_cloud__Project_Task__r.Name,
/*ELSE*/IF(NOT(ISBLANK(project_cloud__External_Resource__c)),
	project_cloud__External_Resource__r.Name,
/*ELSE*/
	&apos;Orphan Capability&apos;
)))</formula>
        <label>Resource or Project Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__External_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Cloud Coach 18-OCT-10)</description>
        <label>External Resource</label>
        <referenceTo>project_cloud__External_Resource__c</referenceTo>
        <relationshipLabel>Capabilities</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hash__c</fullName>
        <description>Calculate a hash of the Capability so the configuration trigger can detect and prevent duplicates</description>
        <formula>project_cloud__External_Resource__c + project_cloud__User__c + project_cloud__Project_Task__c + project_cloud__Work_Type__c</formula>
        <label>Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Per_Day__c</fullName>
        <label>Hours Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsDuplicate__c</fullName>
        <description>This field is used to overcome the shortcoming of SOQL, which is that the clauses cannot compare fields. The primary use for this field is to find capabilities that are duplicates of the primary work type on a project task.</description>
        <formula>NOT(ISBLANK(project_cloud__Project_Task__c)) &amp;&amp; project_cloud__Work_Type__c = project_cloud__Project_Task__r.project_cloud__Work_Type__c</formula>
        <inlineHelpText>If the Primary Work Type on the Project Task this Capability is related to is the same as this capability. The formula evaluates to true.</inlineHelpText>
        <label>Duplicates Primary Work Type?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Capabilities</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Cloud Coach 18-OCT-10)</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Work_Type__c</fullName>
        <description>(Cloud Coach 18-OCT-10)</description>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Capabilities</relationshipLabel>
        <relationshipName>Capabilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Capability</label>
    <nameField>
        <displayFormat>C-{0000000000}</displayFormat>
        <label>Capability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__Capability_Project_Task_Duplicates</fullName>
        <active>true</active>
        <description>Prevent the existence of Capabilities that match the Primary Work Type of the related Project Task</description>
        <errorConditionFormula>project_cloud__IsDuplicate__c</errorConditionFormula>
        <errorDisplayField>project_cloud__Work_Type__c</errorDisplayField>
        <errorMessage>The Project Task this Capability is related to has this Work Type as it&apos;s primary Work Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Capability_Read_Only</fullName>
        <active>true</active>
        <description>Capabilities are joining objects that should never be modfied. Prevent the lookups or owner from changing</description>
        <errorConditionFormula>ISCHANGED(project_cloud__External_Resource__c) ||
ISCHANGED(project_cloud__User__c) ||
ISCHANGED(project_cloud__Project_Task__c)</errorConditionFormula>
        <errorMessage>Please do not modify Capabilities, to make changes delete and/or create new records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__External_Resource_OR_User_Only</fullName>
        <active>true</active>
        <description>Make sure exactly one of the External Resource, User or Project Task lookups is selected</description>
        <errorConditionFormula>IF(ISBLANK(project_cloud__External_Resource__c), 0, 1) +
IF(ISBLANK(project_cloud__User__c), 0, 1) +
IF(ISBLANK(project_cloud__Project_Task__c), 0, 1) != 1</errorConditionFormula>
        <errorMessage>Please select a single External Resource, User or Project Task</errorMessage>
    </validationRules>
</CustomObject>